# multiagent-emergent-deception

./: .gitignore  CITATION.cff  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  LICENSE  LICENSE-AGPL  LICENSE-APACHE  README.md  RUNPOD_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
concordia_mini/agents/: entity_agent.py  entity_agent_with_logging.py
concordia_mini/associative_memory/: basic_associative_memory.py
concordia_mini/components/agent/: __init__.py  action_spec_ignored.py  all_similar_memories.py  concat_act_component.py  constant.py  instructions.py  memory.py  no_op_context_processor.py  observation.py  plan.py  question_of_recent_memories.py  report_function.py  scripted_act.py
concordia_mini/components/game_master/: __init__.py  event_resolution.py  formative_memories_initializer.py  instructions.py  inventory.py  make_observation.py  next_acting.py  next_game_master.py  open_ended_questionnaire.py  payoff_matrix.py  questionnaire.py  script.py  (+4 more)
concordia_mini/document/: interactive_document.py
concordia_mini/environment/: engine.py
concordia_mini/language_model/: base_gpt_model.py  google_aistudio_model.py  gpt_model.py  ollama_model.py  together_ai.py
concordia_mini/thought_chains/: thought_chains.py
concordia_mini/typing/: entity_component.py  prefab.py  scene.py
concordia_mini/utils/: helper_functions.py
config/: __init__.py  experiment.py
config/agents/: __init__.py  negotiation.py
docs/: ARCHITECTURE.md  CHANGELOG.md  METHODOLOGY.md  OUTPUT_GUIDE.md  RUNPOD_GUIDE.md  SETUP.md
examples/: basic_experiment.py
interpretability/: __init__.py  baseline_agents.py  causal_validation.py  cli.py  evaluation.py  evaluation_harness.py  interpretability_evaluation.py  llm_evaluation.py  run_deception_experiment.py
interpretability/causal/: causal_validation.py
interpretability/core/: __init__.py  dataset_builder.py  ground_truth.py
interpretability/probes/: mech_interp_tools.py  sanity_checks.py  train_probes.py
interpretability/scenarios/: emergent_prompts.py
negotiation/: __init__.py  advanced_negotiator.py  base_negotiator.py  config.py  constants.py
negotiation/components/: __init__.py  cultural_adaptation.py  negotiation_instructions.py  negotiation_memory.py  negotiation_strategy.py  strategy_evolution.py  swarm_intelligence.py  temporal_strategy.py  theory_of_mind.py  uncertainty_aware.py
negotiation/game_master/: __init__.py  negotiation.py
negotiation/utils/: __init__.py  parsing.py
tests/: test_config.py  test_imports.py  test_probes.py
(+32 files in other folders)
