[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-emergent-deception"
version = "1.0.0"
description = "Mechanistic interpretability for detecting emergent deception in LLM negotiation agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Teanna Sims"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "transformer-lens>=1.0",
    "sae-lens>=0.5",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pylint"]

[project.scripts]
run-deception-experiment = "interpretability.run_deception_experiment:main"

[tool.setuptools.packages.find]
include = ["concordia_mini*", "negotiation*", "interpretability*"]
