[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-emergent-deception"
version = "1.0.0"
description = "Mechanistic interpretability for detecting emergent deception in LLM negotiation agents"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Teanna Sims"}
]
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0,<3.0",
    "transformers>=4.35,<5.0",
    "transformer-lens>=1.0,<2.0",
    "sae-lens>=0.5,<1.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10,<2.0",
    # HuggingFace
    "accelerate>=0.25,<1.0",
    "huggingface-hub>=0.20,<1.0",
    "sentence-transformers>=2.2,<3.0",
    # Data & Visualization
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    # CLI & Config
    "click>=8.0,<9.0",
    "pydantic>=2.0,<3.0",
    # Utilities
    "tqdm>=4.65,<5.0",
    "absl-py>=1.0,<3.0",
    "termcolor>=2.0,<3.0",
    "reactivex>=4.0,<5.0",
    "typing_extensions>=4.0,<5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pylint"]
# Optional: for using external LLM APIs (not needed for local experiments)
apis = ["openai>=1.0", "ollama>=0.1", "together>=1.0", "google-generativeai>=0.3"]

[project.scripts]
# New Click-based CLI
deception = "interpretability.cli:cli"
# Legacy entry point (backward compatibility)
run-deception-experiment = "interpretability.run_deception_experiment:main"

[tool.setuptools.packages.find]
include = ["concordia_mini*", "negotiation*", "interpretability*", "config*"]
